# sub2-monitor

./: .env.example  .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml  update.sh
.github/workflows/: ci.yml  docker.yml
app/: main.py
app/api/: auth.py  deps.py  notifications.py  platforms.py  router.py  sub2api.py
app/core/: config.py  database.py  security.py
app/models/: all.py  monitor.py  notification.py  platform.py  session.py  snapshot.py  sub2api.py  user.py
app/schemas/: auth.py  notification.py  platform.py  sub2api.py
app/services/: auth.py  monitoring.py  notification.py  priority_sync.py  provider_strategy.py  scheduler.py  sub2api_admin.py  sub2api_database.py  sub2api_proxy.py  sub2api_schedulable.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.ts
frontend/src/api/: client.ts
frontend/src/components/: BalanceLineChart.vue  FirstTokenLineChart.vue  RateLineChart.vue
frontend/src/layouts/: MainLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts
frontend/src/styles/: base.css
frontend/src/views/: LoginView.vue  PlatformsView.vue  Sub2APIDatabaseView.vue
tests/: test_config.py  test_monitoring.py  test_provider_strategy.py  test_sub2api_database.py
