[project]
name = "sub2-monitor"
version = "0.1.0"
description = "A single Python service for monitoring relay platforms that provide keys for sub2api."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi>=25.1.0",
    "croniter>=6.0.0",
    "cryptography>=46.0.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.7.0",
    "sqlalchemy>=2.0.36",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.8.4",
]

[project.scripts]
sub2-monitor = "app.main:run"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
